[CORE-2.9-LTS] Cherry picked commits from tracer upgrade branch (#298)
* Updated Springboot, PostgresSQL and Flyway version in filestore

* Changed code to remove deprecated functions in tracer

* Temporary changes in tracer for springboot 3.0 upgrade

* Removed test cases temporarily and remove IOUtils

* Made changes to POM for compilation

* Updated env variable to pusblish error

* Moved DeadLetterQueueConfiguration in kafka folder

* [CORE-2.9-LTS] Upgraded service request to spring boot 3.2

---------

Co-authored-by: talele08 <talele.aniket@gmail.com>